--- a/config.yml.example
+++ b/config.yml.example
@@ -1,4 +1,12 @@
 ---
+:syslog:
+  :address: 0.0.0.0
+  :port: 50514
+:fwsm:
+  :host: 192.168.1.4
+  :user: admin
+  :pass: admin
+:repo: /path/to/repo
 :address: 0.0.0.0
 :port: 50514
 :user_map: 
