pass extra committer options in a hash

--- a/config.example.yml
+++ b/config.example.yml
@@ -6,11 +6,12 @@
   :host: 192.168.1.4
   :user: admin
   :pass: admin
-:repo: /path/to/repo
-:user_map: 
-  Bob: Bob Barker <bob@foo.bar>
-  john: John <john@foo.bar>
-  :default_suffix: fwsm.foo.bar
+:committer:
+    :repo: /path/to/repo
+    :user_map: 
+    Bob: Bob Barker <bob@foo.bar>
+    john: John <john@foo.bar>
+    :default_suffix: fwsm.foo.bar
 :context_map:
   admin:
   - 192.168.1.4
