--- a/config.example.yml
+++ b/config.example.yml
@@ -8,6 +8,7 @@
   :pass: admin
 :committer:
     :repo: /path/to/repo
+    :push: origin master
     :user_map: 
       Bob: Bob Barker <bob@foo.bar>
       john: John <john@foo.bar>
